--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <iframe
-      src="//stream.crichd.vip/update/star1hi.php"
+      src="//stream.crichd.vip/update/willowcricket.php"
       width="100%"
       height="700px"
       marginheight="0"
